# transparentpath

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  VERSION.txt  dask-requirements.txt  docs.sh  excel-requirements.txt  hdf5-requirements.txt  install.sh  joblib-requirements.txt  json-requirements.txt  parquet-requirements.txt  py36.txt  pyproject.toml  requirements.txt  scaleway_boto3_test.py  scaleway_s3fs_test.py  setup.cfg  setup.py  zipfile-requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pull-request.yml  push-doc.yml  push-pypi.yml  push.yml
_build/doctrees/: changelog.doctree  environment.pickle  index.doctree  modules.doctree  transparentpath.gcsutils.doctree  transparentpath.jsonencoder.doctree
_build/html/: searchindex.js  transparentpath.gcsutils.html
_build/markdown/: changelog.md  index.md  transparentpath.md
docs/: .buildinfo  changelog.html  genindex.html  index.html  objects.inv  search.html  transparentpath.html  transparentpath.jsonencoder.html
docs/_sources/: changelog.rst.txt  transparentpath.jsonencoder.rst.txt  transparentpath.rst.txt
docs/doctrees/: changelog.doctree  environment.pickle  index.doctree  transparentpath.doctree  transparentpath.gcsutils.doctree
docs/gcsutils/: index.html  methodtranslator.html  transparentpath.html
docs/html/: changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js  transparentpath.gcsutils.html  (+1 more)
source/: changelog.rst  conf.py  index.rst
transparentpath/: __init__.py  _version.py
(+100 files in other folders)
