[metadata]
name = transparentpath
description = A class that allows one to use a path in a local file system or a gcs file system (more or less) in almost the same way one would use a pathlib.Path object. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Advestis/transparentpath
author = Advestis
author_email = pythondev@advestis.com
license = GPLv3
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: Unix
    Programming Language :: Python :: 3.8
project_urls =
    Bug Tracker = https://github.com/Advestis/transparentpath/issues
    Documentation = https://advestis.github.io/transparentpath
    Source Code = https://github.com/Advestis/transparentpath/

[options]
packages = find:
install_requires =
    gcsfs==2022.2.0
    fsspec==2022.2.0
    setuptools
    datetime
python_requires = >=3.7
include_package_data = True

[options.extras_require]
dask=
    dask
    distributed
excel=
    pandas
    xlrd
    openpyxl
hdf5=
    h5py
    tables
joblib=
    joblib
    numpy
json=
    numpy
    pandas
pandas=
    pandas
parquet=
    numpy
    pandas
    pyarrow
    fastparquet
all=
    dask
    distributed
    pandas
    xlrd
    openpyxl
    h5py
    tables
    joblib
    numpy
    pyarrow
    fastparquet

[versioneer]
VCS = git
style = pep440
versionfile_source = transparentpath/_version.py
versionfile_build = transparentpath/_version.py
tag_prefix = v
parentdir_prefix = transparentpath-
